# lab5

./: CMakeLists.txt  kursV4.cpp  lab5.cpp  lab5superLast.cpp  main.cpp  protPredp.h  test.cpp
